update<none>: trash, bin - url - load object from url [deploy: none]